--- a/index.html
+++ b/index.html
@@ -29,58 +29,58 @@ MyFreeCams</h1>
 
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&po=6533"><img src="images/pic01.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic02.png" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic02.png" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic06.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic06.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic08.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic08.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic07.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic07.jpg" alt="" /></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic09.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic09.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic12.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic12.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic11.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic11.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic10.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic10.jpg" alt="" /></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic13.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic13.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic14.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic14.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic15.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic15.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="https://t.amyfc.link/130251/3640/0?po=6533"><img src="images/pic16.jpg" alt="" /></a>
+								<a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p"><img src="images/pic16.jpg" alt="" /></a>
 							</div>
 
 					</div>
@@ -104,7 +104,7 @@ So you’ve been surfing the internet for porn for a very long time and you thin
 							<li><a href="" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="" class="icon fa-whatsapp"><span class="label">Whatsapp</span></a></li>
 						</ul>
-						&copy; Design: <a href="https://t.amyfc.link/130251/3640/0?po=6533">Jerkmate</a>. Images: <a href="https://t.amyfc.link/130251/3640/0?po=6533">crystinaqueen</a>.
+						&copy; Design: <a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p">Jerkmate</a>. Images: <a href="https://t.irtyd.com/jgk1t7yncw?url_id=0&aff_id=130251&offer_id=3640&aff_sub=hi&bo=668,910,912&source=crystinaqueenn.github.io&p">crystinaqueen</a>.
 					</div>
 				</div>
 			</footer>
